[tool.poetry]
name = "sla-checker"
version = "0.0.1"
description = "A python module that will check if two events are within a defined SLA."
authors = ["Andrea Dainese <andrea.dainese@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/dainok/sla_checker"

[tool.poetry.dependencies]
python = "^3.6"
holidays = "^0.9.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
