[project]
name = "sla_checker"
version = "0.0.1"
description = "A python module that will check if two events are within a defined SLA."
authors = [
  "Andrea Dainese <andrea.dainese@gmail.com>"
]
license = "GPLv3"
readme = "README.md"
python = "^3.7"
homepage = "https://github.com/dainok/sla_checker"
repository = "https://github.com/dainok/sla_checker"
documentation = "https://github.com/dainok/sla_checker"
keywords = ["sla"]
classifiers = [
  "Topic :: Software Development"
]

# Requirements
[dependencies]
holidays = "^0.9.11"

[dev-dependencies]
pre-commit = { version = "^1.20.0", python = "^3.7" }
black = { version = "^19.3", python = "^3.7" }

[scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
  "setuptools >= 42.0.2",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
